cmake_minimum_required(VERSION 3.21)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_OSX_ARCHITECTURES "arm64")
set(GEODE_DISABLE_PRECOMPILED_HEADERS ON)
set(CMAKE_CXX_VISIBILITY_PRESET hidden)
project(SoundOnSilentModeiOS VERSION 1.0.0)
add_library(${PROJECT_NAME} SHARED src/main.mm)
add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)
setup_geode_mod(${PROJECT_NAME})
